# devela_sentinel manifest
# ==============================================================================
[workspace]
[package]
name = "devela_sentinel"
description = "A downstream sentinel crate for validating devela's public behavior."
repository = "https://github.com/andamira/devela/tree/main/crates/sentinel"
version = "0.1.0"
edition = "2024"

[dependencies]
devela = { path = "../.." }

[features]
test_feature = []

# [lints.rust.unexpected_cfgs]
# level = "warn"
# check-cfg = [ # Allowed configuration flags:
# 	"cfg(nightly_doc)",
# ]
